更新了头像，修改了媒体链接

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ import { USER_NAME } from "../consts";
     </svg>
     <p>
       Copyright © <a
-        href="https://yaoqx.pages.dev/"
+        href="https://Xiesl.pages.dev/"
         target="_blank"
         class="font-bold">{USER_NAME}</a
       >
