基本模板搭建好了

--- a/src/components/blog/diff.astro
+++ b/src/components/blog/diff.astro
@@ -1,5 +1,5 @@
 ---
-const { r, l } = Astro.props;
+const { r, l } = Astro.props;//用于展示两个图像的比较，通常用于“对比”或“差异”效果
 ---
 
 <div class="diff aspect-[16/9]">
