--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,6 +4,8 @@
 import "../styles/global.scss";
 import "../styles/waline.scss";
 import "../styles/transitions.scss";
+import defineConfig from "../../astro.config.mjs";
+
 interface Props {
   title: string;
   description: string;
