--- a/src/components/BaseCard.astro
+++ b/src/components/BaseCard.astro
@@ -5,6 +5,9 @@ import License from "../components/License.astro";
 import CommentWaline from "./CommentWaline.astro";
 import { DATE_FORMAT, infoTest } from "../consts";
 import type { CardInfo } from "../types";
+import defineConfig from "../../astro.config.mjs";
+import { defineCollection } from "astro:content";
+
 const {
   title = "undefined",
   image,
@@ -56,7 +59,7 @@ const hasTags = tags && tags.length > 0;
                 categories.map((categoroy) => (
                   <>
                     <a
-                      href={`/blog/categories/${categoroy}`}
+                      href={`${defineConfig.base}/blog/categories/${categoroy}`}
                       class="btn btn-xs btn-accent"
                     >
                       {categoroy}
@@ -73,7 +76,7 @@ const hasTags = tags && tags.length > 0;
                 tags.map((tag) => (
                   <>
                     <a
-                      href={`/blog/tag/${tag}`}
+                      href={`${defineConfig.base}/blog/tag/${tag}`}
                       class="btn btn-xs btn-secondary"
                     >
                       {tag}
