--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -112,7 +112,7 @@ const pageLinks = generatePageLinks(totalPages);
                         <a
                           title={hidden}
                           aria-label={hidden}
-                          href={hidden === "1" ? `/blog` : `/blog/${hidden}`}
+                          href={hidden === "1" ? `${defineConfig.base}/blog` : `${defineConfig.base}/blog/${hidden}`}
                           class={`menu-item bg-base-100 ${hidden === page.current ? "btn-active" : ""}`}
                         >
                           {hidden}
@@ -125,7 +125,7 @@ const pageLinks = generatePageLinks(totalPages);
                 <a
                   title={link}
                   aria-label={link}
-                  href={link === "1" ? `/blog` : `/blog/${link}`}
+                  href={link === "1" ? `${defineConfig.base}/blog` : `${defineConfig.base}/blog/${link}`}
                   class={`join-item btn bg-base-100 ${link === page.current ? "btn-active" : ""}`}
                 >
                   {link}
@@ -138,7 +138,7 @@ const pageLinks = generatePageLinks(totalPages);
             <a
               title={link}
               aria-label={link}
-              href={link === "1" ? `/blog` : `/blog/${link}`}
+              href={link === "1" ? `${defineConfig.base}/blog` : `${defineConfig.base}/blog/${link}`}
               class={`join-item btn bg-base-100 ${link === page.current ? "btn-active" : ""}`}
             >
               {link}
