--- a/src/pages/blog/tag/[tag]/[...page].astro
+++ b/src/pages/blog/tag/[tag]/[...page].astro
@@ -5,6 +5,7 @@ import BaseLayout from "../../../../layouts/BaseLayout.astro";
 import BaseCard from "../../../../components/BaseCard.astro";
 import { getCollection } from "astro:content";
 import { infoTest } from "../../../../consts";
+import defineConfig from "../../../../../astro.config.mjs";
 
 export async function getStaticPaths({ paginate }: { paginate: any }) {
   const all_posts = await getCollection("blog");
@@ -65,7 +66,7 @@ const pageLinks = generatePageLinks(totalPages);
           title={post.data.title}
           image={post.data.image}
           desc={post.data.description}
-          url={"/blog/" + post.slug}
+          url={`${defineConfig.base}/blog/`+ post.slug}
           pubDate={post.data.pubDate}
           badge={post.data.badge}
           categories={post.data.categories}
@@ -116,8 +117,8 @@ const pageLinks = generatePageLinks(totalPages);
                           aria-label={hidden}
                           href={
                             hidden === "1"
-                              ? `/blog/tag/${params.tag}`
-                              : `/blog/tag/${params.tag}/${hidden}`
+                              ? `${defineConfig.base}/blog/tag/${params.tag}`
+                            : `${defineConfig.base}/blog/tag/${params.tag}/${hidden}`
                           }
                           class={`menu-item bg-base-100 ${hidden === page.current ? "btn-active" : ""}`}
                         >
@@ -133,8 +134,8 @@ const pageLinks = generatePageLinks(totalPages);
                   aria-label={link}
                   href={
                     link === "1"
-                      ? `/blog/tag/${params.tag}`
-                      : `/blog/tag/${params.tag}/${link}`
+                      ? `${defineConfig.base}/blog/tag/${params.tag}`
+                      : `${defineConfig.base}/blog/tag/${params.tag}/${link}`
                   }
                   class={`join-item btn bg-base-100 ${link === page.current ? "btn-active" : ""}`}
                 >
@@ -150,8 +151,8 @@ const pageLinks = generatePageLinks(totalPages);
               aria-label={link}
               href={
                 link === "1"
-                  ? `/blog/tag/${params.tag}`
-                  : `/blog/tag/${params.tag}/${link}`
+                  ? `${defineConfig.base}/blog/tag/${params.tag}`
+                  : `${defineConfig.base}/blog/tag/${params.tag}/${link}`
               }
               class={`join-item btn bg-base-100 ${link === page.current ? "btn-active" : ""}`}
             >
