修复了无法搜索的问题

--- a/src/components/BaseCard.astro
+++ b/src/components/BaseCard.astro
@@ -59,7 +59,7 @@ const hasTags = tags && tags.length > 0;
                 categories.map((categoroy) => (
                   <>
                     <a
-                      href={`${defineConfig.base}/blog/categories/${categoroy}`}
+                      href={`${defineConfig.base}blog/categories/${categoroy}`}
                       class="btn btn-xs btn-accent"
                     >
                       {categoroy}
@@ -76,7 +76,7 @@ const hasTags = tags && tags.length > 0;
                 tags.map((tag) => (
                   <>
                     <a
-                      href={`${defineConfig.base}/blog/tag/${tag}`}
+                      href={`${defineConfig.base}blog/tag/${tag}`}
                       class="btn btn-xs btn-secondary"
                     >
                       {tag}
