--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -16,7 +16,7 @@ import defineConfig from "../../astro.config.mjs";
       format="webp"
       width={300}
       height={300}
-      src={`${defineConfig.base}/${USER_AVATAR}`}
+      src={`${defineConfig.base}${USER_AVATAR}`}
       alt="Profile"
       loading="eager"
     />
