--- a/src/components/EnvelopeCard.astro
+++ b/src/components/EnvelopeCard.astro
@@ -3,7 +3,7 @@ import dayjs from "dayjs";
 import { Image } from "astro:assets";
 import { infoTest } from "../consts";
 import type { EnvelopeInfo } from "../types";
-import defineConfig from "../../astro.config.mjs";
+//import defineConfig from "../../astro.config.mjs";
 
 const { title, desc, image, pubDate, badge, categories, tags, url } =
   Astro.props as EnvelopeInfo;
@@ -37,7 +37,7 @@ const target = "_self";
               categories.map((categoroy) => (
                 <>
                   <a
-                    href={`${defineConfig.base}blog/categories/${categoroy}`}
+                    href={`${import.meta.env.BASE_URL}blog/categories/${categoroy}`}
                     class="btn btn-xs btn-accent"
                   >
                     {categoroy}
@@ -55,7 +55,7 @@ const target = "_self";
             hasTags ? (
               tags.map((tag) => (
                 <>
-                  <a href={`${defineConfig.base}blog/tag/${tag}`} class="btn btn-xs btn-secondary">
+                  <a href={`${import.meta.env.BASE_URL}blog/tag/${tag}`} class="btn btn-xs btn-secondary">
                     {tag}
                   </a>
                   <span>&thinsp;</span>
