--- a/src/components/ProjectJS.astro
+++ b/src/components/ProjectJS.astro
@@ -1,5 +1,5 @@
 ---
-// import defineConfig from "../../astro.config.mjs";
+// //import defineConfig from "../../astro.config.mjs";
 ---
 
 <script>
