制作一个个人简历

--- a/src/components/BaseCard.astro
+++ b/src/components/BaseCard.astro
@@ -6,7 +6,7 @@ import CommentWaline from "./CommentWaline.astro";
 import { DATE_FORMAT, infoTest } from "../consts";
 import type { CardInfo } from "../types";
 //import defineConfig from "../../astro.config.mjs";
-import { defineCollection } from "astro:content";
+//import { defineCollection } from "astro:content";
 
 const {
   title = "undefined",
