--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -16,7 +16,7 @@ import { USER_AVATAR } from "../consts";
       format="webp"
       width={300}
       height={300}
-      src={`${import.meta.env.BASE_URL}${USER_AVATAR}`}
+      src={`${import.meta.env.BASE_URL}/${USER_AVATAR}`}
       alt="Profile"
       loading="eager"
     />
