--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -20,7 +20,7 @@ const { title, description, image } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image" href=`${import.meta.env.BASE_URL}favicon.ico`/>
+<link rel="icon" type="image" href=`${import.meta.env.BASE_URL}/favicon.ico`/>
 <meta name="generator" content={Astro.generator} />
 
 <!-- Page Specific Metadata -->
@@ -32,7 +32,7 @@ const { title, description, image } = Astro.props;
 <!-- Font preloads -->
 <link
   rel="preload"
-  href=`${import.meta.env.BASE_URL}fonts/CascadiaCode.woff2`
+  href=`${import.meta.env.BASE_URL}/fonts/CascadiaCode.woff2`
   as="font"
   type="font/woff2"
   crossorigin
