--- a/src/components/TagCard.astro
+++ b/src/components/TagCard.astro
@@ -35,7 +35,7 @@ const tagsWithCounts = await getTagsWithCounts();
     {
       tagsWithCounts.map(({ tag, count }) => (
         <span class="inline">
-          <a href={`${import.meta.env.BASE_URL}blog/tag/${tag}`} class="btn btn-sm">
+          <a href={`${import.meta.env.BASE_URL}/blog/tag/${tag}`} class="btn btn-sm">
             {tag}
             <div class="badge badge-secondary">{count}</div>
           </a>
